--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,10 @@ app.*.symbols
 app.*.map.json
 
 # Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+/android/*
+/ios/*
+/linux/*
+/macos/*
+/web/*
 debug_proxy_server/node_modules/*
 
