--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,38 +32,38 @@ dependencies:
   flutter:
     sdk: flutter
 
-  fluent_ui: ^4.3.0
-  system_theme: ^2.1.0
+  fluent_ui: ^4.7.3
+  system_theme: ^2.3.1
   dotted_border: ^2.0.0+3
-  desktop_drop: ^0.4.1
+  desktop_drop: ^0.4.3
 
   path: ^1.8.2
-  path_provider: ^2.0.14
+  path_provider: ^2.1.1
   
-  http: ^0.13.5
+  http: ^1.1.0
   
   # Used for MediaType.parse
   http_parser: ^4.0.2
-  dio: ^5.0.3
+  dio: ^5.3.2
   
   json_editor: ^0.0.8
   json_annotation: ^4.7.0 # Serialize and Deserialize Json
   yaml: ^3.1.1
   flutter_syntax_view: ^4.0.0
-  flutter_code_editor: ^0.2.15
+ 
   highlight: ^0.7.0
 
   # Save data locally
   hive_flutter: ^1.1.0
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^9.0.0
 
   # Logging package
   logger: ^1.3.0
 
   provider: ^6.0.5
 
-  uuid: ^3.0.7
-  intl: ^0.17.0
+  uuid: ^4.0.0
+  intl: ^0.18.1
 
   file_picker: ^5.2.5
   filesystem_picker: ^3.1.0
@@ -78,19 +78,23 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  json_serializable: ^6.5.4
-  build_runner: ^2.3.3
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
-  hive_generator: ^2.0.0
+  flutter_lints: ^2.0.3
+  hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
   
-
+flutter_launcher_icons:
+  windows:
+    generate: true
+    image_path: "assets/icons/logo.png"
+    icon_size: 256 # min:48, max:256, default: 48
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
